<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComBoy</string>
    <string name="action_settings">Settings</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_new">New</string>
    <string name="length">Combo Length</string>
    <string name="difficulty">5</string>
    <string name="difficulty_title">Combo Difficulty</string>
    <string name="length_title">Combo Length</string>

</resources>
