<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_load"
        android:icon="@drawable/ic_action_load"
        android:title="@string/action_load"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_action_new"
        android:title="Settings"
        android:showAsAction="never" />
</menu>
